--- a/androidspace/HomeFindingRobot/app/src/main/res/layout/content_robot_control_main.xml
+++ b/androidspace/HomeFindingRobot/app/src/main/res/layout/content_robot_control_main.xml
@@ -28,7 +28,6 @@
         android:layout_width="64dp"
         android:layout_height="wrap_content"
         android:id="@+id/distance_textview"
-        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/textview"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
@@ -38,17 +37,13 @@
         android:layout_width="64dp"
         android:layout_height="wrap_content"
         android:id="@+id/position_textview"
-        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/textview"
-        app:layout_constraintLeft_toRightOf="@+id/distance_textview"
-        android:layout_marginLeft="0dp"
-        android:layout_marginStart="0dp" />
+        app:layout_constraintLeft_toRightOf="@+id/distance_textview" />
 
     <TextView android:text="@string/heading_str"
         android:layout_width="64dp"
         android:layout_height="wrap_content"
         android:id="@+id/heading_textview"
-        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/textview"
         app:layout_constraintLeft_toRightOf="@+id/position_textview"
         android:layout_marginStart="10dp"
@@ -58,21 +53,15 @@
         android:layout_width="64dp"
         android:layout_height="wrap_content"
         android:id="@+id/drift_textview"
-        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/textview"
-        app:layout_constraintLeft_toRightOf="@+id/heading_textview"
-        android:layout_marginStart="0dp"
-        android:layout_marginLeft="0dp" />
+        app:layout_constraintLeft_toRightOf="@+id/heading_textview" />
 
     <TextView android:text="@string/joy_val_str"
         android:layout_width="64dp"
         android:layout_height="wrap_content"
         android:id="@+id/joystick_textview"
-        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/textview"
-        app:layout_constraintLeft_toRightOf="@+id/drift_textview"
-        android:layout_marginLeft="0dp"
-        android:layout_marginStart="0dp" />
+        app:layout_constraintLeft_toRightOf="@+id/drift_textview" />
 
     <Button
         android:layout_width="110dp"
@@ -84,7 +73,9 @@
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/button7"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <Button
         android:layout_width="110dp"
@@ -142,5 +133,31 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/button7" />
+
+    <Button
+        android:id="@+id/button10"
+        android:layout_width="33dp"
+        android:layout_height="48dp"
+        android:onClick="right"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginStart="21dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintTop_toTopOf="@+id/button9"
+        app:layout_constraintLeft_toRightOf="@+id/button9"
+        android:layout_marginLeft="21dp" />
+
+    <Button
+        android:id="@+id/button11"
+        android:layout_width="33dp"
+        android:layout_height="48dp"
+        android:onClick="left"
+        android:layout_marginStart="22dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/button7"
+        android:layout_marginLeft="22dp"
+        tools:layout_editor_absoluteY="365dp"
+        android:layout_marginTop="0dp" />
 
 </android.support.constraint.ConstraintLayout>
